[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pokemnon_fikrianggara"
version = "0.0.1"
authors = [
  { name="Fikri Septrian Anggara", email="dev.fikrianggara@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/fikrianggara/seq-2-seq-transformer"